@@ -3,9 +3,10 @@ This file shows the changes in recent releases of MODx. The most current release
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
 
-MOD 0.9.5 beta 3 (rev 1533 - September 27, 2006)
+MOD 0.9.5 beta 3 (rev 1534 - September 27, 2006)
 ====================================
 
+* [FS#499] Blank config.inc.php PRIOR to installation no longer errors (1534)
 * Fixed New Template and New Chunk actions in manager (1533)
 * Replaced hard-coded Working image with style.php var (1533)
 * Update Manager to work better in IE (1530)
